<package>
  <name>simple_ardop</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for simple_ardop</p>
    <p>This package contains configuration data, 3D models and launch files
for simple_ardop robot</p>
  </description>
  <author>me</author>
  <maintainer email="me2email@hth.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>